add: get companies update info list
